--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<div class="item">
 		<div class="cover"><img src="images/game_image_fall.png"></div>
 		<div class="store">
-			<a href="#"><img src="images/btn_download_apple.png"></a>
-			<a href="#"><img src="images/btn_download_google.png"></a>	
+			<a href="https://itunes.apple.com/app/falldown!-deluxe/id887173871?mt=8"><img src="images/btn_download_apple.png"></a>
+			<a href="https://play.google.com/store/apps/details?id=com.wiiza.falldown"><img src="images/btn_download_google.png"></a>	
 		</div>
 	</div>
 </div>
@@ -35,15 +35,17 @@
 	<p>How did you find us? <a href="mailto:hi@wiiza.com">hi@wiiza.com</a></p>	
 	<p>@ wiiza.com</p>
 </div>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-61265073-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+    var pageTracker = _gat._getTracker("UA-61265073-1");
+    pageTracker._trackPageview();
+} catch(err) {}
+</script>
+
 </body>
 </html>
