--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<div class="item">
 		<div class="cover"><img src="images/game_image_stars.png"></div>
 		<div class="store">
-			<a href="#"><img src="images/btn_download_apple.png"></a>
-			<a href="#"><img src="images/btn_download_google.png"></a>	
+			<a href="https://itunes.apple.com/app/stars-link/id931236460"><img src="images/btn_download_apple.png"></a>
+			<a href="https://play.google.com/store/apps/details?id=com.wiiza.link"><img src="images/btn_download_google.png"></a>	
 		</div>
 	</div>
 	
